--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -24,10 +24,9 @@
             <div class="image-sizer relative mb-small">
               <img class="{% unless block.img_aspect == 'Original' %} object-cover object-center absolute inset-0 h-full {% endunless %} w-full" src="{{col.image}}" alt=""loading="lazy">
             </div>
-          <h3 class="sub-heading">{{col.heading}}</h3>
-          <p>
-            {{col.description | truncatewords: 13, "..." }}
-          </p>
+            <div>
+              {{col.block-content-html}}
+            </div>
           {% if col.link %}</a>{% endif%}
         </div>
       {% endfor %}
