--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,6 +170,10 @@
         {% if block._id == 'banner-video' %}
           {% assign hasVideo = true %}
         {% endif %}
+        {% if block._id == 'banner-split-video' %}
+          {% assign hasVideo = true %}
+        {% endif %}
+
         {% if block._id == 'slider' %}
           {% assign hasSlider = true %}
         {% endif %}
