--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -1,6 +1,6 @@
 
-<section class="px-0 ">
-  <div class="px-side mb-8">
+<section class="px-0 cssSlider">
+  <div class="px-side mb-8 ">
       <div class="max-width">
           <div>
             {% if noH1 == true %}
@@ -15,11 +15,11 @@
           </div>
       </div>
     </div>
-    <div class="gap-4 flex flex-nowrap overflow-scroll no-scrollbar" {% if block.max-width %} style="max-width:  {{block.max-width}} 500px"{% endif %}>
+    <div class="gap-4 flex flex-nowrap overflow-scroll no-scrollbar scroll-container" {% if block.max-width %} style="max-width:  {{block.max-width}} 500px"{% endif %}>
 
 
       {% for col in block.scroll-items %}
-        <div class="shrink-0 {% if forloop.first  %} ml-full-side {% endif %} {% if forloop.last  %} mr-full-side {% endif %}" style="width: min( {{block.image-width}} , 500px );">
+        <div class="shrink-0 scroll-item {% if forloop.first  %} ml-full-side {% endif %} {% if forloop.last  %} mr-full-side {% endif %}" style="width: min( {{block.image-width}} , 500px );">
           {% if col.link %}<a href="{{col.link}}">{% endif%}
             <div class="image-sizer relative mb-small">
               <img class="{% unless block.img_aspect == 'Original' %} object-cover object-center absolute inset-0 h-full {% endunless %} w-full" src="{{col.image}}" alt=""loading="lazy">
@@ -31,6 +31,16 @@
         </div>
       {% endfor %}
     </div>
+    <div class="px-side pt-8">
+      <div class="max-width">
+        <div class="flex justify-between">
+          <button class="btn btn-secondary scroll-left"><</button>
+          <button class="btn btn-secondary scroll-right">></button>
+        </div>
+      </div>
+
+    </div>
+
   </section>
 
 
@@ -39,3 +49,22 @@
     aspect-ratio: {% include logic/aspect-logic.html aspect = block.img_aspect %} ;
   }
 </style>
+
+
+<script>
+
+  const section{{forloop.index}}ScrollContainer = document.querySelector('#section-{{forloop.index}} .scroll-container');
+  function scrollLeft() {
+    section{{forloop.index}}ScrollContainer.scrollBy({
+      left: -section{{forloop.index}}ScrollContainer.clientWidth,
+      behavior: 'smooth'
+    });
+    function scrollRight() {
+      section{{forloop.index}}ScrollContainer.scrollBy({
+        left: section{{forloop.index}}ScrollContainer.clientWidth,
+        behavior: 'smooth'
+      });
+    }
+  }
+
+</script>
