--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,10 +479,6 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
-.mx-full-side {
-  margin-left: var(--max-width-side-padding);
-  margin-right: var(--max-width-side-padding);
-}
 .\!mb-0 {
   margin-bottom: 0px !important;
 }
@@ -793,6 +789,9 @@ video {
 }
 .pt-0 {
   padding-top: 0px;
+}
+.pt-8 {
+  padding-top: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1456,15 +1455,8 @@ float: right
   .md\:order-\[0\] {
     order: 0;
   }
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
   .md\:mb-0 {
     margin-bottom: 0px;
-  }
-  .md\:ml-0 {
-    margin-left: 0px;
   }
   .md\:block {
     display: block;
@@ -1474,9 +1466,6 @@ float: right
   }
   .md\:overflow-auto {
     overflow: auto;
-  }
-  .md\:pl-full-side {
-    padding-left: var(--max-width-side-padding);
   }
   .md\:pl-0 {
     padding-left: 0px;
