--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -22,7 +22,7 @@
         <div class="shrink-0 scroll-item {% if forloop.first  %} ml-full-side {% endif %} {% if forloop.last  %} mr-full-side {% endif %}" style="width: min( {{block.image-width}} , 500px );">
           {% if col.link %}<a href="{{col.link}}">{% endif%}
             <div class="image-sizer relative mb-small">
-              <img class="{% unless block.img_aspect == 'Original' %} object-cover object-center absolute inset-0 h-full {% endunless %} w-full" src="{{col.image}}" alt=""loading="lazy">
+              <img class="w-full" src="{{col.image}}" alt=""loading="lazy">
             </div>
             <div>
               {{col.block-content-html}}
