removed extra posts

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -1,4 +1,4 @@
-<div class="scheme-leaf-100 relative" id="section-c1">
+<div class="scheme-base relative" id="section-c1">
             
       <!--banner-split -->
       
@@ -56,7 +56,7 @@ width: calc(100vw - calc( var(--side-gap) * 2));
   </div>
 
 
-<div class="scheme-leaf-400 relative" id="section-c2">
+<div class="scheme-base relative" id="section-c2">
       
 <section class="px-0 ">
 <div class="px-side mb-8">
@@ -106,7 +106,7 @@ width: calc(100vw - calc( var(--side-gap) * 2));
     
 
 
-<div class="scheme-leaf-400 relative" id="section-c3">
+<div class="scheme-base relative" id="section-c3">
             
   <!--text-block -->
   
