--- a/_includes/block/banner-split-video.html
+++ b/_includes/block/banner-split-video.html
@@ -47,9 +47,9 @@
         self-end
         {% endcase %};
       {% if block.desktop-image-position == 'right' %}
-          /* padding-left: var(--max-width-side-padding); */
+          padding-left: var(--max-width-side-padding);
         {% else %}
-          /* padding-right: var(--max-width-side-padding); */
+          padding-right: var(--max-width-side-padding);
           order:3;
       {% endif %}
     }
