--- a/_includes/block/slider.html
+++ b/_includes/block/slider.html
@@ -1,57 +1,54 @@
 
-<section>
-      <div class="max-width mb-[60px]">
-          <div class="
-          {% case block.text-alignment %}
-          {% when 'left' %}
-          mr-auto
-          {% when 'center' %}
-           mx-auto text-center
-          {% when 'right' %}
-          ml-auto text-right
-          {% endcase %}
-          mb-8
-          " {% if block.text-box-max-width %} style="max-width: min({{block.text-box-max-width}}, 100%) "{% endif %}>
-           
-          {% if noH1 == true %}
-          {{block.block-content-html | replace: 'h2','h1'}}
-          {% else %}
-          {{block.block-content-html}}
-          {% endif %}
-    
-          {% if block.block-content-html contains "h2" %}
-            {% assign noH1 = false %}
-          {% endif %}
-          </div>
-          <div class="-mx-small slider mb-vert">
-            {% for col in block.slider %}
-            <div class="p-small h-full scheme-{{block.slider_col_color_scheme}} col-{{forloop.index}}" >
-              <div class="color-set">
-                {% if col.image %}
-                <div class="image-sizer relative">
-                  <img class="{% unless block.img_aspect == 'Original' %} absolute inset-0 object-cover object-center h-full w-full {% endunless %}" src="{{col.image}}" alt=""loading="lazy">
-                </div>
-                {% endif %}
-                {% if col.youtube_embed %}
+<section class="px-0">
+  <div class="px-side">
 
-                  <div class="relative video-parent" style="aspect-ratio:{% if block.video_aspect == 'Testimonials' %} .563; {% else %} 2 {% endif %}" data-embed-code='{{col.youtube_embed}}'>
-                    <img src="{{col.youtube_placeholder}}" class="absolute inset-0 h-full w-full" alt="" loading="lazy">
-
-                    <div class="video-target" ></div>
-                  </div>
-
-                  {% endif %}
-
-                {% if col.block-content-html %}
-                <div class="p-small star-aligner">
-                  {{col.block-content-html}}
-                </div>
-                {% endif %}
-              </div>
-            </div>
-            {% endfor %}
-          </div>
+    <div class="max-width mb-[60px]">
+      <div class="
+      {% case block.text-alignment %}
+      {% when 'left' %}
+      mr-auto
+      {% when 'center' %}
+      mx-auto text-center
+      {% when 'right' %}
+      ml-auto text-right
+      {% endcase %}
+      mb-8
+      " {% if block.text-box-max-width %} style="max-width: min({{block.text-box-max-width}}, 100%) "{% endif %}>
+      
+      {% if noH1 == true %}
+      {{block.block-content-html | replace: 'h2','h1'}}
+      {% else %}
+      {{block.block-content-html}}
+      {% endif %}
+      
+      {% if block.block-content-html contains "h2" %}
+      {% assign noH1 = false %}
+      {% endif %}
       </div>
+    </div>
+  </div>
+        <div class="slider mb-vert">
+          {% for col in block.slider %}
+
+              {% if col.video_path %}
+              <div class="p-[10px]">
+                <div class="relative video-parent h-[30vw] flex-0 m-4" style="aspect-ratio: {{col.video_aspect_ratio}};">
+                  <img class="absolute h-full w-full inset-0 object-cover" src="{{col.image}}" alt="" loading="lazy">
+                  <video class="absolute inset-0 h-full w-full object-cover lazy-vid" autoplay muted loop>
+                     <source data-src="{{col.video_path}}" type="video/{{col.video_type}}">
+                  </video>
+                </div>
+
+              </div>
+                {% else %}
+                <div class="p-[10px]">
+                  <img class="h-[30vw] width-auto flex-0 m-4" src="{{col.image}}" alt=""loading="lazy">
+                </div>
+                {% endif %}
+              
+                {% endfor %}
+        </div>
+      
     </section>
 
 
