--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -203,8 +203,6 @@
 
 {% if hasVideo == true  %}
 
-
-
 <script>
 
 addEventListener("load", (event) => {
@@ -246,7 +244,7 @@ addEventListener("load", (event) => {
 
 
 <script>
-
+    console.log('worked here')
 
 // universal functions
 
@@ -270,6 +268,8 @@ function toggleBurger() {
 }
 
 burgerButton.addEventListener('click', toggleBurger)
+
+
 
 {% if hasAccordion == true %}
   const buttons = document.querySelectorAll(".expandButton");
@@ -298,6 +298,8 @@ burgerButton.addEventListener('click', toggleBurger)
   )
 
   {% endif %}
+
+
 
   {% if hasCSSSlider == true  %}
   const cssSliders = document.querySelectorAll('.cssSlider');
@@ -331,6 +333,8 @@ burgerButton.addEventListener('click', toggleBurger)
   });
 
   {% endif %}
+
+
 
   {% if hasTicketBanner == true %}
   const tickerBanners = document.querySelectorAll('.tickerBanner');
@@ -402,35 +406,9 @@ tickerBanners.forEach(banner => {
            arrows: true,
            prevArrow:  `<button type="button" class="slick-prev"><svg width="50px" height="50px" viewBox="0 0 24 24" stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" color="var(--text-color)"><path d="M21 12L3 12M3 12L11.5 3.5M3 12L11.5 20.5" stroke="var(--text-color)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>`,
            nextArrow: `<button type="button" class="slick-next"><svg width="50px" height="50px" viewBox="0 0 24 24" stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" color="var(--text-color)"><path d="M3 12L21 12M21 12L12.5 3.5M21 12L12.5 20.5" stroke="var(--text-color)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>`,
-           slidesToShow: {{block.slider_column_count}},
-           slidesToScroll: 1,
-           dragable: true,
-           infinite: false,
-           speed: 500,
-           fade: false,
-           cssEase: 'linear',
-           responsive: [
-              {
-                breakpoint: 1200,
-                settings: {
-                  slidesToShow: 3,
-                  slidesToScroll: 3,
-                }
-              },
-              {
-                breakpoint: 900,
-                settings: {
-                  slidesToShow: 2,
-                  slidesToScroll: 2
-                }
-              },
-              {
-                breakpoint: 600,
-                settings: {
-                  slidesToShow: 1,
-                  slidesToScroll: 1
-                }
-              }]
+            slidesToShow: 1,
+            centerMode: true,
+            variableWidth: true,
           });
           
           const sectionContainer{{forloop.index}} = document.querySelector('#section-{{forloop.index}}')
