--- a/_includes/block/slider.html
+++ b/_includes/block/slider.html
@@ -27,7 +27,7 @@
       </div>
     </div>
   </div>
-        <div class="slider mb-vert">
+        <div class="slider mb-vert schem">
           {% for col in block.slider %}
 
               {% if col.video_path %}
