--- a/_includes/block/text-block-top-overlap.html
+++ b/_includes/block/text-block-top-overlap.html
@@ -1,29 +1,32 @@
 
 <section class="bg-inherit">
-      <div class="max-width
-      {% case block.text-alignment %}
-      {% when 'right' %}
-          text-right
-      {% when 'center' %}
-          text-center
-      {% else %}
-      {% endcase %}"
-       >
-          <div class="color-set flex justify-center items-center ">
-            <div {% if block.content-max-width %} style="max-width: {{block.content-max-width}} "{% endif %}>
-              {% if noH1 == true %}
-              {{block.block-content-html | replace: 'h2','h1'}}
-              {% else %}
-              {{block.block-content-html}}
-              {% endif %}
-              
-              {% if block.block-content-html contains "h2" %}
-              {% assign noH1 = false %}
-              {% endif %}
-            </div>
-          </div>
+  <div class="max-width
+  {% case block.text-alignment %}
+  {% when 'right' %}
+      text-right
+  {% when 'center' %}
+      text-center
+  {% else %}
+  {% endcase %}"
+   >
+   <div class="scheme-{{block.overlay-color-scheme}}">
+      <div class="color-set flex justify-center items-center ">
+        <div {% if block.content-max-width %} style="max-width: {{block.content-max-width}} "{% endif %}>
+          {% if noH1 == true %}
+          {{block.block-content-html | replace: 'h2','h1'}}
+          {% else %}
+          {{block.block-content-html}}
+          {% endif %}
+          
+          {% if block.block-content-html contains "h2" %}
+          {% assign noH1 = false %}
+          {% endif %}
+        </div>
       </div>
-    </section>
+  </div>
+</div>
+  
+</section>
 
 
 <style>
