--- a/style.css
+++ b/style.css
@@ -8,6 +8,22 @@
 
 
 
+
+:root{
+        --heading-font-serif-family: 'Canela', sans-serif;
+        --heading-font-sans-family: 'Canela', sans-serif;
+        --body-font-family: Mulish, sans-serif;
+    }
+
+
+    @font-face {
+      font-family: 'Canela'; /* Name of your font */
+      src: url('/fonts/Canela-Text-Family/CanelaText-Medium-Trial.otf') format('otf');
+      font-weight: normal; /* Or bold, italic, etc. */
+      font-style: normal; /* Or italic */
+    }
+
+
 *{
     padding: 0%;
     margin: 0;
@@ -32,14 +48,14 @@ body.locked{
   overflow-Y:hidden;
 }
 
-h1,h2,h3,h4,h5,h6 {
-  font-family: var(--heading-font-family);
+h3,h4,h5,h6 {
+  font-family: var(--heading-font-sans-family);
   font-optical-sizing: auto;
 }
 
 
-h1, h2, h3 {
-  font-family: var(--heading-font-family);
+h1, h2 {
+  font-family: var(--heading-font-serif-family);
   font-weight: 300;
   line-height: 1.2;
 }
@@ -47,6 +63,16 @@ h1, h2, h3 {
 h2 {
   font-size: 2.5rem;
   letter-spacing: -0.01em;
+}
+
+h3 {
+font-family: "Engravers Gothic FS";
+font-size: 0.385rem;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 0.03656rem;
+text-transform: uppercase;
 }
 
 h1:not(:last-child),
