--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -31,7 +31,7 @@
         </div>
       {% endfor %}
     </div>
-    <div class="px-side pt-8">
+    <div class="px-side py-8">
       <div class="max-width">
         <div class="flex justify-between">
           <button class="btn btn-secondary scroll-left"><</button>
