--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,15 +74,14 @@
 </head>
 
 <body>
-  <div class="scheme-header sticky top-0 z-50" id="header">
+  <div class="scheme-header absolute w-full top-0 z-50" id="header">
   <header>
-    <div class="max-width flex justify-between items-center">
-      <div class="flex-1">
-        <a class="p-4" href="/">
-          <img class="" style="max-width: min({{site.data.navigation.header_logo_width}}, 100%)" src="{{site.data.navigation.logo_image}}" alt="{{site.data.navigation.logo_alt}}">
-        </a>
+    <div class="max-width flex justify-center items-center py-4">
+      <div class="text-center pt-8">
+          <h1>REGENT</h1>
+          <h3>BALI CANGGU</h3>
       </div>
-      <nav class="text-right hidden right-0 top-0 lg:block shrink-0">
+      <!-- <nav class="text-right hidden right-0 top-0 lg:block shrink-0">
 
         {% assign noH1 = true %}
         {% for link in site.data.navigation.header_links %}
@@ -143,7 +142,7 @@
 
       </div>
       </div>
-    </div>
+    </div> -->
   </header>
 </div>
 
@@ -197,7 +196,6 @@
   {% endif %}
 
 
-{% include footer.html %}
 
 {% if hasVideo == true  %}
 
@@ -250,22 +248,6 @@ function passHeightUp(target) {
     target.parentElement.parentElement.style.setProperty('--true-height',  `${target.offsetHeight}px` )
   }
 
-
-// burger menu
-
-  const burgerButton = document.querySelector('.burger-button');
-  const burgerMenu = document.querySelector('.burger-menu');
-  const body = document.querySelector('body')
-
-
-
-function toggleBurger() {
-  burgerButton.classList.toggle('active')
-  burgerMenu.classList.toggle('active')
-  body.classList.toggle('locked')
-}
-
-burgerButton.addEventListener('click', toggleBurger)
 
 
 
@@ -411,25 +393,6 @@ tickerBanners.forEach(banner => {
           
           const sectionContainer{{forloop.index}} = document.querySelector('#section-{{forloop.index}}')
 
-const containedVideos{{forloop.index}} = sectionContainer{{forloop.index}}.querySelectorAll('.video-parent')
-
-console.log(sectionContainer{{forloop.index}},containedVideos{{forloop.index}})
-
-function triggerVideoLoad(e) {
-  let videoTarget = e.target.querySelector('.video-target')
-  console.log(e.target,e.target.dataset.embedCode)
-  videoTarget.innerHTML = e.target.dataset.embedCode
-  e.target.removeEventListener('mouseenter',triggerVideoLoad);
-  setTimeout(() => {
-      videoTarget.style.opacity = 1;
-    }, 1000);
-  
-}
-
-
-containedVideos{{forloop.index}}.forEach(vid  => {
-  vid.addEventListener('mouseenter',triggerVideoLoad)
-})
 
           {% endif %}
 
