--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,9 +432,6 @@ video {
 .relative {
   position: relative;
 }
-.sticky {
-  position: sticky;
-}
 .inset-0 {
   inset: 0px;
 }
@@ -671,6 +668,9 @@ video {
 .border {
   border-width: 1px;
 }
+.border-4 {
+  border-width: 4px;
+}
 .border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -722,6 +722,9 @@ video {
 .p-0 {
   padding: 0px;
 }
+.p-32 {
+  padding: 8rem;
+}
 .p-4 {
   padding: 1rem;
 }
@@ -771,6 +774,10 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .py-8 {
   padding-top: 2rem;
@@ -844,7 +851,7 @@ video {
 
 
 :root{
-        --heading-font-serif-family: 'Canela', sans-serif;
+        --heading-font-serif-family: 'Canela', serif;
         --heading-font-sans-family: 'Canela', sans-serif;
         --body-font-family: Mulish, sans-serif;
     }
@@ -858,7 +865,7 @@ video {
     }
 
 
-*{
+* {
     padding: 0%;
     margin: 0;
     box-sizing: 0;
@@ -882,26 +889,31 @@ body.locked{
   overflow-Y:hidden;
 }
 
-h3,h4,h5,h6 {
+
+
+h3,h4,h5,h6,.small-heading {
+  font-size: 1rem;
+  text-transform: uppercase;
   font-family: var(--heading-font-sans-family);
   font-optical-sizing: auto;
+  letter-spacing: 0.15em ;
 }
 
 
-h1, h2 {
+h1, h2, .large-heading {
   font-family: var(--heading-font-serif-family);
+  font-size: 2rem;
   font-weight: 300;
   line-height: 1.2;
 }
 
 h2 {
-  font-size: 2.5rem;
   letter-spacing: -0.01em;
 }
 
-h3 {
+h3, .small-heading {
 font-family: "Engravers Gothic FS";
-font-size: 0.385rem;
+font-size: 1rem;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
@@ -922,7 +934,7 @@ p:not(:last-child):not(.mb-0) {
 
 
 p,li {
-  font-size: 0.9rem;
+  font-size: 1rem;
   line-height: 150%;
   font-weight:350;
 }
@@ -1005,6 +1017,11 @@ header a:hover, header .unlinked:hover {
 
 #header{
   z-index: 1000;
+
+}
+
+header {
+    background-color: transparent;
 }
 
 footer * {
@@ -1074,13 +1091,14 @@ letter-spacing: 0.54px;
 
 /* extra for editor */
 
-a.button, span.button {
+
+[class*='button']{
   font-family: var(--body-font-family);
   font-weight: 400;
   text-transform: uppercase;
   font-size: 0.8rem;
-  letter-spacing: 0.15em;
-  padding: 0.8em 1em;
+  letter-spacing: 0.1em;
+  padding: 1.5em 4em;
   text-decoration: none;
   color: inherit;
   border: 1px solid;
@@ -1088,6 +1106,7 @@ a.button, span.button {
   opacity: 1;
   margin-top: 0.5rem;
 }
+
 
 a.button:hover {
   opacity:0.5;
@@ -1402,10 +1421,10 @@ float: right
     width: 50px;
   }
   body .slick-prev {
-  left: var(--small-padding);
+  left: var(--max-width-side-padding);
   }
   body .slick-next {
-  right: var(--small-padding);
+  right: var(--max-width-side-padding);
   }
 
   body .slick-next::before, body .slick-prev::before{
@@ -1499,8 +1518,11 @@ float: right
   .md\:overflow-auto {
     overflow: auto;
   }
-  .md\:pl-0 {
-    padding-left: 0px;
+  .md\:bg-fixed {
+    background-attachment: fixed;
+  }
+  .md\:pr-0 {
+    padding-right: 0px;
   }
   .md\:text-center {
     text-align: center;
