Updated 2 files via CloudCannon.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
   <header>
     <div class="max-width flex justify-center items-center py-4">
       <div class="text-center pt-8">
-          <h1>REGENT</h1>
+          <h1 class="mb-0">REGENT</h1>
           <h3>BALI CANGGU</h3>
       </div>
       <!-- <nav class="text-right hidden right-0 top-0 lg:block shrink-0">
