--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,8 +92,8 @@
   <header>
     <div class="max-width flex justify-center items-center py-4">
       <div class="text-center pt-8">
-          <h1 class="mb-0">REGENT</h1>
-          <h3>BALI CANGGU</h3>
+          <h1 class="mb-0 leading-none">REGENT</h1>
+          <h3 class="text-xs">BALI CANGGU</h3>
       </div>
       <!-- <nav class="text-right hidden right-0 top-0 lg:block shrink-0">
 
