--- a/_includes/block/banner-split-video.html
+++ b/_includes/block/banner-split-video.html
@@ -1,7 +1,7 @@
 
 <section class="p-0" >
   <div class="">
-  <div class="grid md:grid-cols-2 overflow-hidden gap-x-8 justify-stretch">
+  <div class="grid md:grid-cols-2 overflow-hidden justify-stretch">
 
     <div class="picture relative mb-vert md:mb-0">
       <picture >
@@ -15,7 +15,7 @@
     </video>
       
     </div>
-    <div class="text-block px-full-side {% if block.desktop-image-position == 'right' %} md:pr-0 {% else %} md:pr-0 {% endif %} py-vert">       
+    <div class="text-block px-full-side py-vert">       
       {% if noH1 == true %}
       {{block.block-content-html | replace: 'h2','h1'}}
       {% else %}
