--- a/style.css
+++ b/style.css
@@ -45,15 +45,18 @@ h3,h4,h5,h6,.small-heading {
   letter-spacing: 0.15em ;
 }
 
-
-h1, h2, .large-heading {
-  font-family: var(--heading-font-serif-family);
+.large-heading {
   font-size: 2rem;
+}
+
+h1, h2,  {
+  font-family: var(--heading-font-serif-family);
   font-weight: 300;
   line-height: 1.2;
 }
 
 h2 {
+  font-size: 1.5rem;
   letter-spacing: -0.01em;
 }
 
