Updated 3 files via CloudCannon.

--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -34,8 +34,8 @@
     <div class="px-side py-8">
       <div class="max-width">
         <div class="flex justify-between">
-          <button class="btn btn-secondary scroll-left"><</button>
-          <button class="btn btn-secondary scroll-right">></button>
+          <button class="btn btn-secondary scroll-left">&#x2039;</button>
+          <button class="btn btn-secondary scroll-right">&#x203A;</button>
         </div>
       </div>
 
