--- a/_includes/block/horizontal-scroll-basic.html
+++ b/_includes/block/horizontal-scroll-basic.html
@@ -34,8 +34,8 @@
     <div class="px-side py-8">
       <div class="max-width">
         <div class="flex justify-between">
-          <button class="btn btn-secondary scroll-left">&#x2039;</button>
-          <button class="btn btn-secondary scroll-right">&#x203A;</button>
+          <button class="btn btn-secondary scroll-left"><?xml version="1.0" encoding="UTF-8"?><svg width="64px" height="64px" stroke-width="0.8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000"><path d="M15 6L9 12L15 18" stroke="#000000" stroke-width="0.8" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>
+          <button class="btn btn-secondary scroll-right"><?xml version="1.0" encoding="UTF-8"?><svg width="64px" height="64px" stroke-width="0.8" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000"><path d="M9 6L15 12L9 18" stroke="#000000" stroke-width="0.8" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>
         </div>
       </div>
 
