--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -251,6 +251,9 @@ addEventListener("load", (event) => {
 {% endif %}
 
 
+  
+
+
 
 
 <script>
@@ -396,7 +399,7 @@ tickerBanners.forEach(banner => {
     console.log('#section-{{forloop.index}} has slider')
 
          $('#section-{{forloop.index}} .slider').slick({
-           dots: false,
+           dots: true,
            arrows: true,
            prevArrow:  `<button type="button" class="slick-prev"><svg width="50px" height="50px" viewBox="0 0 24 24" stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" color="var(--text-color)"><path d="M21 12L3 12M3 12L11.5 3.5M3 12L11.5 20.5" stroke="var(--text-color)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>`,
            nextArrow: `<button type="button" class="slick-next"><svg width="50px" height="50px" viewBox="0 0 24 24" stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" color="var(--text-color)"><path d="M3 12L21 12M21 12L12.5 3.5M21 12L12.5 20.5" stroke="var(--text-color)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>`,
