Updated 2 files via CloudCannon.

--- a/_includes/block/slider.html
+++ b/_includes/block/slider.html
@@ -48,6 +48,8 @@
               
                 {% endfor %}
         </div>
+        <!-- Custom wrapper to hold arrows and dots -->
+        <div class="slick-nav"></div>
       
     </section>
 
