Updated 1 file via CloudCannon.

--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ float: right
 
 .slick-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-top: 1rem;
   position: relative;
