--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@
 * {
     padding: 0%;
     margin: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
-img{max-width: 100%;}
+img{ max-width: 100%; height:auto;}
 
 html {
   scroll-padding-top: 107px;
@@ -49,7 +49,7 @@ h3,h4,h5,h6,.small-heading {
   font-size: 2rem;
 }
 
-h1, h2,  {
+h1, h2  {
   font-family: var(--heading-font-serif-family);
   font-weight: 300;
   line-height: 1.2;
