Updated 1 file via CloudCannon.

--- a/style.css
+++ b/style.css
@@ -590,7 +590,8 @@ float: right
   position: relative;
 }
 
-  .slick-nav .slick-prev, .slick-nav .slick-next {
+  .slick-nav .slick-prev,
+  .slick-nav .slick-next {
     top: unset;
     bottom: unset;
     z-index: 99;
