--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,8 +92,8 @@
   <header>
     <div class="max-width flex justify-center items-center py-4">
       <div class="text-center pt-8">
-          <h1 class="mb-0 leading-none">REGENT</h1>
-          <h3 class="text-xs">BALI CANGGU</h3>
+          <h1 class="mb-0 leading-none text-4xl">REGENT</h1>
+          <h3 class="text-sm mt-0">BALI CANGGU</h3>
       </div>
       <!-- <nav class="text-right hidden right-0 top-0 lg:block shrink-0">
 
@@ -204,11 +204,18 @@
     </section>
   {% endif %}
 
-
-  {% if page.layout == 'benefits' %}
-    {% include benefits.html %}
-  {% endif %}
-
+  <!-- footer -->
+  <footer class="scheme-footer">
+      <div class="md:flex justify-between items-center py-4">
+        <div class="text-left">
+          <img src="/uploads/kc-logo.png" width="120px">
+        </div>
+        <div class="text-left">
+          <div class="text-left">
+          <h3 class="mb-4"> Get in touch </h3>
+          <p class="text-sm mb-1"> hello@kelapacreative.com</p>
+          <p class="text-sm"> +62 812-3888-8888</p>
+        </div>
 
 
 {% if hasVideo == true  %}
