--- a/_includes/block/slider.html
+++ b/_includes/block/slider.html
@@ -27,12 +27,12 @@
       </div>
     </div>
   </div>
-        <div class="slider mb-vert schem flex">
+        <div class="slider mb-vert schem flex gap-[{{block.slider-col-padding | default: '6px'}}]">
           {% for col in block.slider %}
 
               {% if col.video_path %}
-              <div class="p-[10px]">
-                <div class="relative video-parent h-[30vw] flex-0 m-4" style="aspect-ratio: {{col.video_aspect_ratio}};">
+              <div class="">
+                <div class="relative video-parent h-[30vw] flex-0 m-[{{block.slider-col-gap | default: '6px'}}]" style="aspect-ratio: {{col.video_aspect_ratio}};">
                   <img class="absolute h-full w-full inset-0 object-cover" src="{{col.image}}" alt="" loading="lazy">
                   <video class="absolute inset-0 h-full w-full object-cover lazy-vid" autoplay muted loop>
                      <source data-src="{{col.video_path}}" type="video/{{col.video_type}}">
@@ -41,8 +41,8 @@
 
               </div>
                 {% else %}
-                <div class="p-[10px]">
-                  <img class="h-[30vw] width-auto flex-0 m-4" src="{{col.image}}" alt=""loading="lazy">
+                <div class="">
+                  <img class="h-[30vw] width-auto flex-0 m-[{{block.slider-col-padding | default: '6px'}}]" src="{{col.image}}" alt=""loading="lazy">
                 </div>
                 {% endif %}
               
