--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,8 +468,11 @@ video {
 .-order-1 {
   order: -1;
 }
-.m-4 {
-  margin: 1rem;
+.m-\[0\.5rem\] {
+  margin: 0.5rem;
+}
+.m-\[6px\] {
+  margin: 6px;
 }
 .-mx-small {
   margin-left: calc(var(--small-padding) * -1);
@@ -484,6 +487,9 @@ video {
 }
 .mb-0 {
   margin-bottom: 0px;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 .mb-16 {
   margin-bottom: 4rem;
@@ -527,8 +533,14 @@ video {
 .mr-full-side {
   margin-right: var(--max-width-side-padding);
 }
+.mt-0 {
+  margin-top: 0px;
+}
 .mt-6 {
   margin-top: 1.5rem;
+}
+.mt-8 {
+  margin-top: 2rem;
 }
 .block {
   display: block;
@@ -560,6 +572,9 @@ video {
 .min-h-full {
   min-height: 100%;
 }
+.w-4\/5 {
+  width: 80%;
+}
 .w-\[initial\] {
   width: initial;
 }
@@ -573,6 +588,9 @@ video {
 .min-w-min {
   min-width: -moz-min-content;
   min-width: min-content;
+}
+.max-w-\[40rem\] {
+  max-width: 40rem;
 }
 .max-w-screen-md {
   max-width: 768px;
@@ -640,15 +658,14 @@ video {
 .gap-8 {
   gap: 2rem;
 }
-.gap-\[9px\] {
-  gap: 9px;
+.gap-\[0\.5rem\] {
+  gap: 0.5rem;
+}
+.gap-\[12px\] {
+  gap: 12px;
 }
 .gap-small {
   gap: var(--small-padding);
-}
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
 }
 .self-start {
   align-self: flex-start;
@@ -671,8 +688,8 @@ video {
 .border {
   border-width: 1px;
 }
-.border-4 {
-  border-width: 4px;
+.border-2 {
+  border-width: 2px;
 }
 .border-y {
   border-top-width: 1px;
@@ -725,9 +742,6 @@ video {
 .p-0 {
   padding: 0px;
 }
-.p-32 {
-  padding: 8rem;
-}
 .p-4 {
   padding: 1rem;
 }
@@ -736,9 +750,6 @@ video {
 }
 .p-8 {
   padding: 2rem;
-}
-.p-\[10px\] {
-  padding: 10px;
 }
 .p-\[15px\] {
   padding: 15px;
@@ -821,8 +832,22 @@ video {
 .text-right {
   text-align: right;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 1;
+}
+.text-sm {
+  font-size: 0.875rem;;
+  line-height: 1.2;
+}
 .italic {
   font-style: italic;
+}
+.leading-none {
+  line-height: 1;
+}
+.leading-normal {
+  line-height: 1.5;
 }
 .underline {
   text-decoration-line: underline;
@@ -850,18 +875,15 @@ video {
   transition-duration: 500ms;
 }
 
-
-
-
-
+@source inline("slick-dots, slick-nav, .slick-next, .slick-prev, .slick-slide, .slick-list, .slick-track, .slick-active, .slick-initialized, .slick-arrow");
 
 * {
     padding: 0%;
     margin: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
-img{max-width: 100%;}
+img{ max-width: 100%; height:auto;}
 
 html {
   scroll-padding-top: 107px;
@@ -873,10 +895,11 @@ body{
   overflow-X: hidden;
   /* Set padding equal to height of fixed header */
   scroll-padding-top: 107px;
+  background-color: #f0f0f0;
 }
 
 body.locked{
-  overflow-Y:hidden;
+  overflow-y:hidden;
 }
 
 
@@ -886,24 +909,27 @@ h3,h4,h5,h6,.small-heading {
   text-transform: uppercase;
   font-family: var(--heading-font-sans-family);
   font-optical-sizing: auto;
-  letter-spacing: 0.15em ;
+  text-wrap: balance;
 }
 
-
-h1, h2, .large-heading {
-  font-family: var(--heading-font-serif-family);
+.large-heading {
   font-size: 2rem;
+}
+
+h1, h2  {
+  font-family: var(--heading-font-serif-family);
   font-weight: 300;
   line-height: 1.2;
+  text-wrap: balance;
 }
 
 h2 {
-  letter-spacing: -0.01em;
+  font-size: 1.5rem;
 }
 
 h3, .small-heading {
 font-family: "Engravers Gothic FS";
-font-size: 1rem;
+font-size: 0.9rem;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
@@ -911,22 +937,29 @@ letter-spacing: 0.03656rem;
 text-transform: uppercase;
 }
 
-h1:not(:last-child),
-h2:not(:last-child),
-h3:not(:last-child){
+h1,
+h2,
+h3{
+  margin-top:0.5em;
   margin-bottom:0.5em;
 }
 
-p:not(:last-child):not(.mb-0) {
+p {
   margin-bottom: 1rem;
 }
 
+h1:last-child,
+h2:last-child,
+h3:last-child,
+p:last-child{
+  margin-bottom:0;
+}
 
 
 p,li {
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 150%;
-  font-weight:350;
+  font-weight:300;
 }
 
 body ul{
@@ -965,12 +998,15 @@ textarea:focus, textarea:focus-within{
 /* editor styles for none content uses */
 
 .heading-md {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 .heading-lg {
-  font-size: 2.5rem;
-  letter-spacing: -0.01em;
+  font-size: 2.0rem;
+}
+
+.heading-sm {
+  font-size: 1.2rem;
 }
 
 hr {
@@ -979,16 +1015,12 @@ hr {
   margin: 2rem 0;
 }
 
-
-
-
 section,header,footer{
     padding: var(--vert-gap) var(--side-gap);
     background-size: cover;
     background-position: center;
     color: var(--text-color);
     background-color: var(--bg-color);
-    
 }
 header{
     padding: 0 var(--side-gap)
@@ -1083,18 +1115,19 @@ letter-spacing: 0.54px;
 
 
 [class*='button']{
-  font-family: var(--body-font-family);
+  font-family: "Engravers Gothic FS";
   font-weight: 400;
   text-transform: uppercase;
   font-size: 0.8rem;
   letter-spacing: 0.1em;
-  padding: 1.5em 4em;
+  padding: 1em 4em;
   text-decoration: none;
   color: inherit;
   border: 1px solid;
   display:inline-block;
   opacity: 1;
   margin-top: 0.5rem;
+  line-height: 0.8;
 }
 
 
@@ -1217,9 +1250,21 @@ float: right
     .mob-col-w-5{grid-column:span 5;}
     .mob-col-w-6{grid-column:span 6;}
 
-    h2.heading-lg {
-      font-size: 1.8rem;
+    .heading-md {
+      font-size: 1.3rem;
+}
+
+    .heading-lg {
+      font-size: 1.6rem;
     }
+    p {
+      font-size: 0.9rem;
+    }
+    section {
+      padding: 10%;
+    }
+
+
   }
 
 .col-h-2{grid-row: span 2 ;}
@@ -1261,11 +1306,11 @@ float: right
   }
   
   .burger-top{
-    top: -02px;
+    top: -2px;
   }
   
   .burger-bottom{
-    bottom: -02px;
+    bottom: -2px;
   }
   /* make sure this has the same top as the burger button has padding*/
   .burger-button.active .burger-top{
@@ -1323,6 +1368,9 @@ float: right
   
 
 /* accordian */
+.accordion-parent p{
+   font-size: 0.9rem;
+}
 .drop-sec{
     overflow: hidden;
     height: calc(var(--true-height) + var(--small-padding));
@@ -1372,7 +1420,7 @@ float: right
 .tickerBanner{
     --bannerBlockLength: 280px;
     --bannerBlockTime: 2s;
-  overflow-X: hidden;
+  overflow-x: hidden;
   display: flex;
   flex-direction: row-reverse;
   text-align: center;
@@ -1423,6 +1471,61 @@ float: right
     font-size: 50px;
     content: '';
   }
+
+.slick-nav {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-top: 3rem;
+  position: relative;
+  gap:1rem;
+}
+
+  .slick-nav .slick-prev,
+  .slick-nav .slick-next {
+    top: unset;
+    bottom: unset;
+    left: unset;
+    right: unset;
+    position: relative;
+    z-index: 99;
+    height: 15px;
+    width: 15px;
+  }
+
+  .slick-nav .slick-dots {
+    order: 2;
+    margin: 0;
+    position: relative;
+    bottom:unset;
+    width: auto;
+  }
+    .slick-nav .slick-dots li {
+    width: 15px;
+    height: 15px;
+    top: -2px;
+  }
+
+  .slick-nav .slick-next {
+    order: 3;
+    margin-left: -7px;
+  }
+
+.slick-nav .slick-dots li button::before {
+  color: transparent;
+  background-color: transparent;
+  border: 1px solid #fff;
+  border-radius: 20%;
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  transform: rotate(45deg);
+}
+
+.slick-nav .slick-dots li.slick-active button::before {
+  color: transparent;
+  background-color: white;
+}
 
 
   @media (max-width: 768px ) {
@@ -1478,6 +1581,9 @@ float: right
   .sm\:grid {
     display: grid;
   }
+  .sm\:w-1\/2 {
+    width: 50%;
+  }
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1502,6 +1608,9 @@ float: right
   .md\:block {
     display: block;
   }
+  .md\:flex {
+    display: flex;
+  }
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1511,11 +1620,12 @@ float: right
   .md\:bg-fixed {
     background-attachment: fixed;
   }
-  .md\:pr-0 {
-    padding-right: 0px;
-  }
   .md\:text-center {
     text-align: center;
+  }
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.2;
   }
 }
 @media (min-width: 1024px) {
@@ -1524,5 +1634,11 @@ float: right
   }
   .lg\:hidden {
     display: none;
+  }
+  .lg\:border-4 {
+    border-width: 4px;
+  }
+  .lg\:p-32 {
+    padding: 8rem;
   }
 }
