--- a/editor.css
+++ b/editor.css
@@ -2,22 +2,16 @@
 
   /* duplicated in base style for none h2 uses */
   h2.heading-lg {
-    font-size: 2.5rem;
+`
   }
 
   /* duplicated in base style for none h2 uses */
   h2.heading-md {
-    font-size: 1.8rem;
+
   }
 
   h3.sub-heading {
-    font-family: "Engravers Gothic FS";
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.035em;
-    text-transform: uppercase;
+ 
   }
 
 
