--- a/_includes/block/accordion.html
+++ b/_includes/block/accordion.html
@@ -17,11 +17,11 @@
             {% for drop in block.drop_down %}
             <div >
               <div class="expandButton">
-                <h2 class="heading-sm mb-0">{{drop.button-text}}</h3>
+                <h2 class="heading-sm m-0">{{drop.button-text}}</h3>
                 <span></span>
               </div>
               <div class="drop-sec collapsed">
-                <div class="content *:text-sm">
+                <div class="content">
                   {{drop.block-content-html}}
                 </div>
               </div>
