--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,6 +423,52 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.\!container {
+  width: 100% !important;
+}
+.container {
+  width: 100%;
+}
+@media (min-width: 640px) {
+  .\!container {
+    max-width: 640px !important;
+  }
+  .container {
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px) {
+  .\!container {
+    max-width: 768px !important;
+  }
+  .container {
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px) {
+  .\!container {
+    max-width: 1024px !important;
+  }
+  .container {
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px) {
+  .\!container {
+    max-width: 1280px !important;
+  }
+  .container {
+    max-width: 1280px;
+  }
+}
+@media (min-width: 1536px) {
+  .\!container {
+    max-width: 1536px !important;
+  }
+  .container {
+    max-width: 1536px;
+  }
+}
 .fixed {
   position: fixed;
 }
@@ -473,6 +519,9 @@ video {
 }
 .m-\[6px\] {
   margin: 6px;
+}
+.m-0 {
+  margin: 0px;
 }
 .-mx-small {
   margin-left: calc(var(--small-padding) * -1);
@@ -843,11 +892,11 @@ video {
 .italic {
   font-style: italic;
 }
+.leading-\[1\.7\] {
+  line-height: 1.7;
+}
 .leading-none {
   line-height: 1;
-}
-.leading-normal {
-  line-height: 1.5;
 }
 .underline {
   text-decoration-line: underline;
@@ -928,8 +977,8 @@ h2 {
 }
 
 h3, .small-heading {
-font-family: "Engravers Gothic FS";
-font-size: 0.9rem;
+font-family: var(--heading-font-sans-family);
+font-size: 1rem;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
@@ -966,6 +1015,22 @@ body ul{
   list-style: disc;
   margin-left: 1rem;
 }
+
+  #animated-text {
+    display: inline-block;
+    white-space: pre-wrap;
+  }
+  #animated-text .char {
+    opacity: 0;
+    display: inline-block;
+  }
+  #animated-text.animate .char {
+    animation: fadeIn 0.3s ease forwards;
+    animation-delay: var(--delay);
+  }
+  @keyframes fadeIn {
+    to { opacity: 1; }
+  }
 
 
 /* form */
@@ -1115,7 +1180,7 @@ letter-spacing: 0.54px;
 
 
 [class*='button']{
-  font-family: "Engravers Gothic FS";
+  font-family: var(--heading-font-sans-family);
   font-weight: 400;
   text-transform: uppercase;
   font-size: 0.8rem;
@@ -1590,6 +1655,9 @@ float: right
   .sm\:border-r {
     border-right-width: 1px;
   }
+  .sm\:p-12 {
+    padding: 3rem;
+  }
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1623,9 +1691,9 @@ float: right
   .md\:text-center {
     text-align: center;
   }
-  .md\:text-xl {
+  .md\:text-xl\/\[1\.7\] {
     font-size: 1.25rem;
-    line-height: 1.2;
+    line-height: 1.7;
   }
 }
 @media (min-width: 1024px) {
