--- a/_includes/block/slider.html
+++ b/_includes/block/slider.html
@@ -32,7 +32,7 @@
 
               {% if col.video_path %}
               <div class="">
-                <div class="relative video-parent h-[30vw] flex-0 m-[{{block.slider-col-gap | default: '6px'}}]" style="aspect-ratio: {{col.video_aspect_ratio}};">
+                <div class="relative video-parent h-[50vh] flex-0 m-[{{block.slider-col-gap | default: '6px'}}]" style="aspect-ratio: {{col.video_aspect_ratio}};">
                   <img class="absolute h-full w-full inset-0 object-cover" src="{{col.image}}" alt="" loading="lazy">
                   <video class="absolute inset-0 h-full w-full object-cover lazy-vid" autoplay muted loop>
                      <source data-src="{{col.video_path}}" type="video/{{col.video_type}}">
