--- a/_includes/block/slider.html
+++ b/_includes/block/slider.html
@@ -42,7 +42,7 @@
               </div>
                 {% else %}
                 <div class="">
-                  <img class="h-[30vw] width-auto flex-0 m-[{{block.slider-col-padding | default: '6px'}}]" src="{{col.image}}" alt=""loading="lazy">
+                  <img class="h-[50vh] width-auto flex-0 m-[{{block.slider-col-padding | default: '6px'}}]" src="{{col.image}}" alt=""loading="lazy">
                 </div>
                 {% endif %}
               
