--- a/_includes/block/banner-split-video.html
+++ b/_includes/block/banner-split-video.html
@@ -8,7 +8,7 @@
         <source srcset="{{block.background-desktop-image}}" media="(min-width: 750px)" />
         <img class="{% unless block.img_aspect == 'Original' %} absolute inset-0 h-full w-full object-cover object-center {% endunless %}" src="{{block.background-mobile-image}}" alt="{{block.background-alt}}"loading="lazy" />
       </picture>
-          <video class="absolute inset-0 h-full w-full object-cover object-center lazy-vid" autoplay="" muted loop>
+          <video class="absolute inset-0 h-full w-full object-cover object-center lazy-vid" autoplay="" muted loop playsinline>
       {% for video in block.videos %}
       <source data-src="{{video.video_path}}" type="video/{{video.video_type}}">
       {% endfor %}
