--- a/style.css
+++ b/style.css
@@ -409,7 +409,6 @@ float: right
       padding: 10%;
     }
 
-
   }
 
 .col-h-2{grid-row: span 2 ;}
@@ -677,14 +676,19 @@ float: right
   @media (max-width: 768px ) {
   body .slick-prev, body .slick-next {
     bottom: -60px;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     }
 
   body .slick-prev svg, body .slick-next svg {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
   }
+      .slick-nav .slick-dots li {
+    width: 8px;
+    height: 8px;
+    } 
+
   }
 
   .star-aligner img {
